Reapply "LPD-49265 portal-search-elasticsearch7-impl: Patch classes to avoid the entitlement sub-system from starting, and clean up the arguments for the entitlement agent. The entitlement sub-system is ES' replacement of Java SecurityManager, which is not needed for Sidecar."
This reverts commit f6f2656b206b235e4b936fdaf814bb0de4f6b959.